log
Wed 04 Oct 2023 11:34:29 PM UTC: 
 sudoku.c | 31 ++++++++++++++++++-------------
 1 file changed, 18 insertions(+), 13 deletions(-)
 tests:  0|5
total_score: 0/70
bad003d
Wed 04 Oct 2023 11:35:09 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
cdfe52b
Wed 04 Oct 2023 11:35:26 PM UTC: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
c807d18
Wed 04 Oct 2023 11:41:20 PM UTC: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:15: error: unused variable ‘b’ [-Werror=unused-variable]
   47 |   int i,j,k,a,b;
      |               ^
sudoku.c:47:11: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |   int i,j,k,a,b;
      |           ^
sudoku.c:47:9: error: unused variable ‘j’ [-Werror=unused-variable]
   47 |   int i,j,k,a,b;
      |         ^
sudoku.c:47:7: error: unused variable ‘i’ [-Werror=unused-variable]
   47 |   int i,j,k,a,b;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
e475643
